[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scripts/Projectiles/Characters/projveg4.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0427.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0426.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0425.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0429.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0430.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0431.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0432.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0433.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0434.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0435.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0417.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0416.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0415.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0414.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0413.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0412.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0411.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv047.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv048.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv049.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv046.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv045.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv044.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv043.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv042.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv041.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv040.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0418.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0419.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0420.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0421.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0422.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0423.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0424.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0410.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Projectiles/Veget/attv04/atv0428.png" type="Texture" id=37]
[ext_resource path="res://Sons/racine.wav" type="AudioStream" id=38]
[ext_resource path="res://Sons/racinend.wav" type="AudioStream" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "expD",
"speed": 18.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 21 ) ],
"loop": true,
"name": "sendL",
"speed": 18.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "expL",
"speed": 18.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "sendD",
"speed": 18.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "sendR",
"speed": 18.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "hor",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "sendU",
"speed": 18.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "ver",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 29 ) ],
"loop": true,
"name": "expU",
"speed": 18.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "expR",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.3224, 14.3151 )

[node name="proveg4" type="Area2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="particlespr" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 1 )
animation = "sendR"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="R" type="Position2D" parent="."]
position = Vector2( 29, 0 )

[node name="L" type="Position2D" parent="."]
position = Vector2( -29, 0 )

[node name="U" type="Position2D" parent="."]
position = Vector2( 0, -29 )

[node name="D" type="Position2D" parent="."]
position = Vector2( 0, 29 )

[node name="Son" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 38 )

[node name="Son2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 39 )
[connection signal="body_entered" from="." to="." method="_on_Particule_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
